--- a/in-class/style.css
+++ b/in-class/style.css
@@ -12,7 +12,8 @@ html, body {
 
 .container {
     background-color: aquamarine;
-}
+    height: 100%;
+} 
 
 header {
     height: 20%;
@@ -25,6 +26,31 @@ nav, footer {
 }
 
 main {
-    height: 60%;
-    background-color: cyan;
+    height: 90%;
+    background-color: dodgerblue;
+}
+
+aside {
+    width: 20%;
+    height: 100%;
+    background-color: royalblue;
+    display: inline-block;
+    float: left;
+}
+
+section {
+    width: 60%;
+    height: 100%;
+    background-color:darkblue;
+    display: inline-block;
+    float: left;
+}
+
+.box {
+    position: fixed;
+    top: 150px;
+    right: 150px;
+    width: 300px;
+    height: 300px;
+    background-color: salmon;
 }
