--- a/Project/Project-03/css/style.css
+++ b/Project/Project-03/css/style.css
@@ -110,7 +110,7 @@ li{
 
   .ref {
     text-decoration: none;
-    color:maroon;
+    color:tomato;
     font-size: 24px;
     font-family: 'Special Elite', cursive;
   }
