--- a/exercises/exercise-04/style.css
+++ b/exercises/exercise-04/style.css
@@ -1,34 +1,55 @@
-* {
-    margin: 0;
+*{
+    margin:0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
+html,body{
+    height: 140%;
 }
 
-.container {
-    justify-content: center;
-    align-items: center;
+.container{
+    background-color: navy;
+    height:140%;
+
+}
+
+
+header{
+    position:fixed;
+    right:0px;
+    width:240px;
+    height: 400px;
+    background-color: dodgerblue;
+}
+
+body{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.author{
+    font-style: italic;
+    color: paleturquoise;
+    font-size: 18px;
+}
+.title{
+    color: paleturquoise;
+}
+h1{
+    font-size: 45px;
+}
+main{
+    font-size: 23px;
     display: flex;
-    flex-direction: column;
-    background: yellow;
+    flex-wrap: wrap;
+    justify-content:left;
 }
-
-.wrapper {width: 50%;}
-
-@media (min-width:480px){
-    .container{
-        background: green;
-    }
+.item{
+    width:410px;
+    height:550px;
+    margin:5px;
+    background-color:skyblue;
 }
-
-@media (min-width: 768px){
-    .container{
-        background:navy;
-    }
-    p {
-        color: white;
-    }
+h3{
+    font-style: italic;
+    font-size: 24px;
 }
